testdata/baselines/reference/submodule/compiler/jsFileCompilationEnumSyntax.errors.txt
a.js(1,1): error TS8006: 'enum' declarations can only be used in TypeScript files.


==== a.js (1 errors) ====
    enum E { }
    ~~~~~~~~~~
!!! error TS8006: 'enum' declarations can only be used in TypeScript files.